--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,12 @@
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <version>2.0.0</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-logging</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
@@ -54,6 +60,13 @@
             <groupId>org.mybatis.generator</groupId>
             <artifactId>mybatis-generator-core</artifactId>
             <version>1.3.5</version>
+        </dependency>
+
+        <!-- log4j. -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-log4j</artifactId>
+            <version>1.3.2.RELEASE</version>
         </dependency>
 
     </dependencies>
@@ -87,10 +100,10 @@
             </plugin>
 
 
-
-
         </plugins>
 
+
+        <!--将资源文件加载进项目-->
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
@@ -98,20 +111,20 @@
             <resource>
                 <directory>src/main/java</directory>
                 <includes>
-                               <include>**/*.properties</include>
-                                <include>**/*.xml</include>
-                  </includes>
-                               <filtering>true</filtering>
+                    <include>**/*.properties</include>
+                    <include>**/*.xml</include>
+                </includes>
+                <filtering>true</filtering>
             </resource>
             <resource>
-                       <directory>src/main/java</directory>
-                        <includes>
-                          <include>**/*.properties</include>
-                            <include>**/*.xml</include>
-                          </includes>
-                          <filtering>true</filtering>
-                              </resource>
-                      </resources>
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*.properties</include>
+                    <include>**/*.xml</include>
+                </includes>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
 
     </build>
 
