--- a/pom.xml
+++ b/pom.xml
@@ -76,12 +76,21 @@
             <version>1.18.2</version>
             <scope>provided</scope>
         </dependency>
-
+        <!-- jackson json数据显示绑定 -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.9.8</version>
         </dependency>
+
+        <!-- druid -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+            <version>1.1.9</version>
+        </dependency>
+
+
 
     </dependencies>
 
