--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -50,6 +50,21 @@ spring.datasource.druid.stat-view-servlet.reset-enable=false
 spring.datasource.druid.stat-view-servlet.login-username=admin
 spring.datasource.druid.stat-view-servlet.login-password=123456
 
+# 配置连接池属性
+spring.redis.jedis.pool.max-active=10
+spring.redis.jedis.pool.max-idle=10
+spring.redis.jedis.pool.max-wait=2000
+spring.redis.jedis.pool.min-idle=5
+
+#配置redis服务器属性
+spring.redis.port=6379
+spring.redis.host=localhost
+spring.redis.password=123456
+spring.redis.timeout=10000
+
+
+
+
 
 # springboot热部署
 spring.devtools.restart.enabled=true
