--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,12 @@
             <version>1.2.47</version>
         </dependency>
 
+        <!-- rabbitMQ -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+
 
 
     </dependencies>
