--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -61,10 +61,14 @@ spring.redis.port=6379
 spring.redis.host=localhost
 spring.redis.password=123456
 spring.redis.timeout=10000
-
-
-
-
+# rabbitmq
+spring.application.name=springboot-rabbitmq
+spring.rabbitmq.host=127.0.0.1
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+spring.rabbitmq.publisher-confirms=true
+spring.rabbitmq.virtual-host=/
 
 # springboot热部署
 spring.devtools.restart.enabled=true
