--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -69,6 +69,17 @@ spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 spring.rabbitmq.publisher-confirms=true
 spring.rabbitmq.virtual-host=/
+#邮箱发送
+spring.mail.default-encoding=UTF-8
+spring.mail.host=smtp.163.com
+#发送者的邮箱密码
+spring.mail.password=hxb5201314
+#端口
+spring.mail.port=25
+#协议
+spring.mail.protocol=smtp
+#发送者的邮箱账号
+spring.mail.username=mrhexibing@163.com
 
 # springboot热部署
 spring.devtools.restart.enabled=true
