增加ID生成器，generator生成器增加example

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 # LOG4J配置
-log4j.rootCategory=INFO,stdout,file,web
+log4j.rootCategory=INFO,stdout,file
 # 控制台输出
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender 
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout 
