批量增加系统随机生成数据

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -81,6 +81,11 @@ spring.mail.protocol=smtp
 #发送者的邮箱账号
 spring.mail.username=mrhexibing@163.com
 
+##es地址
+spring.data.elasticsearch.cluster-nodes = 127.0.0.1:9300
+
+
+
 # springboot热部署
 spring.devtools.restart.enabled=true
 spring.devtools.restart.additional-paths=src/main/java
