--- a/pom.xml
+++ b/pom.xml
@@ -76,11 +76,12 @@
             <version>1.18.2</version>
             <scope>provided</scope>
         </dependency>
-        <!-- jackson json数据显示绑定 -->
+        <!-- jackson json数据显示绑定修改版本 -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.9.8</version>
+
         </dependency>
 
         <!-- druid -->
