--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@
 #spring.datasource.username=root
 #spring.datasource.password=root
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-
+server.port=9094
 # 这4个参数key里不带druid也可以，即可以还用上面的这个4个参数
-spring.datasource.druid.url=jdbc:mysql://localhost:3306/myblog?useUnicode=true&characterEncoding=utf-8&useSSL=false
+spring.datasource.druid.url=jdbc:mysql://localhost:3306/lucklybaby?useUnicode=true&characterEncoding=utf-8&useSSL=false
 spring.datasource.druid.username=root
 spring.datasource.druid.password=root
 spring.datasource.druid.driver-class-name=com.mysql.jdbc.Driver
@@ -56,7 +56,10 @@ spring.devtools.restart.enabled=true
 spring.devtools.restart.additional-paths=src/main/java
 # 启动时加载该目录下文件
 mybatis.mapperLocations=classpath:mapper/*Mapper.xml   
-mybatis.typeAliasesPackage=com.example.demo1.model
+mybatis.typeAliasesPackage=com.bingo.lucklybaby.model
+
+
+jdbc.driverLocation=C:\\Users\\Administrator\\.m2\\repository\\mysql\\mysql-connector-java\\5.1.47\\mysql-connector-java-5.1.47.jar
 
 
 
