--- a/pom.xml
+++ b/pom.xml
@@ -62,13 +62,16 @@
             <version>1.3.5</version>
         </dependency>
 
-        <!-- log4j. -->
+        <!-- 引入日志依赖 自带slf4j-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-log4j</artifactId>
-            <version>1.3.2.RELEASE</version>
+            <artifactId>spring-boot-starter-log4j2</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
