--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 server.port=9094
 # 这4个参数key里不带druid也可以，即可以还用上面的这个4个参数
-spring.datasource.druid.url=jdbc:mysql://localhost:3306/lucklybaby?useUnicode=true&characterEncoding=utf-8&useSSL=false
+spring.datasource.druid.url=jdbc:mysql://localhost:3306/lucklybaby?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
 spring.datasource.druid.username=root
 spring.datasource.druid.password=root
 spring.datasource.druid.driver-class-name=com.mysql.jdbc.Driver
